Switch to ReadTheDocs theme

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,8 @@
 site_name: Hello Robbie
 site_url: https://hello-robbie.github.io/
+
 theme:
-  name: cinder
+  name: readthedocs
 
 nav:
   - Home: index.md
